set taskvine executor for tests

--- a/tests/cpBias_test/bps_cpBias.yaml
+++ b/tests/cpBias_test/bps_cpBias.yaml
@@ -13,6 +13,6 @@ payload:
 parsl_config:
   retries: 0
   monitoring: true
-  executor: WorkQueue
+  executor: TaskVine
   provider: Local
   log_level: logging.WARNING
