--- a/examples/bps_parsl_config.yaml
+++ b/examples/bps_parsl_config.yaml
@@ -1,11 +1,21 @@
 # WorkQueueExecutor configuration using a LocalProvider, i.e., running
 # on the submit node.
+#parsl_config:
+#  retries: 1
+#  executor: WorkQueue
+#  provider: Local
+#  monitoring: false
+#  checkpoint: false
+
+# TaskVine configuration using a LocalProvider, i.e., running
+# on the submit node.
 parsl_config:
   retries: 1
-  executor: WorkQueue
+  executor: TaskVine
   provider: Local
   monitoring: false
   checkpoint: false
+
 
 ## WorkQueueExecutor using a SlurmProvider for running at NERSC.
 #parsl_config:
